[package]
name = "endpoint_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
hdrhistogram = "7.5"
anyhow = "1.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
